# plugify-module-python3

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_ru.md  plugify-module-python3.12.json  plugify-module-python3.12.pmodule.in  plugify-module-python3.pmodule.in  py3-12-lang-module.json  py3-12-lang-module.pmodule  py3-12-lang-module.pmodule.in  py3-12-lang-module.wmodule
.github/workflows/: cmake-multiple-platform.yml
cmake/: dyncall.cmake
conda/: bld.bat  build.sh  meta.yaml.example
docs/: linux_building.md
generator/: generator.py
lib/plugify/: plugin.py
python3.12/darwin-arm64/debug/include/: pyconfig.h
python3.12/darwin-arm64/lib/: getopt.py  locale.py  platform.py  shutil.py  sysconfig.py
python3.12/darwin-arm64/lib/idlelib/: calltip.py  editor.py  macosx.py  mainmenu.py  textview.py  zoomheight.py
python3.12/darwin-arm64/lib/idlelib/idle_test/: test_config.py  test_format.py  test_sidebar.py
python3.12/darwin-arm64/lib/logging/: handlers.py
python3.12/darwin-arm64/lib/multiprocessing/: util.py
python3.12/darwin-arm64/lib/test/: _test_multiprocessing.py  pythoninfo.py  test_c_locale_coercion.py  test_file.py  test_fileio.py  test_getpath.py  test_http_cookiejar.py  test_launcher.py  test_logging.py  test_os.py  test_pdb.py  test_resource.py  test_signal.py  test_socket.py  test_source_encoding.py  test_ssl.py  test_sysconfig.py  test_tarfile.py  test_time.py  test_winreg.py
python3.12/darwin-arm64/lib/test/libregrtest/: run_workers.py
python3.12/darwin-arm64/lib/test/support/: __init__.py  asyncore.py
python3.12/darwin-arm64/lib/test/test_asyncio/: test_subprocess.py  test_unix_events.py
python3.12/darwin-arm64/lib/test/test_ctypes/: test_callbacks.py  test_loading.py
python3.12/darwin-arm64/lib/test/test_tkinter/: support.py  test_loadtk.py
python3.12/darwin-arm64/lib/tkinter/: dnd.py  tix.py
python3.12/darwin-arm64/release/include/: pyconfig.h
python3.12/darwin-arm64/release/lib/: ld_so_aix
python3.12/darwin_arm64/lib/: webbrowser.py
python3.12/darwin_arm64/lib/ctypes/: wintypes.py
python3.12/darwin_arm64/lib/idlelib/: configdialog.py  pyshell.py
python3.12/darwin_arm64/lib/test/: test_crypt.py  test_io.py  test_ntpath.py  test_perfmaps.py  test_platform.py  test_sys.py  test_threadsignals.py  test_urllib.py
python3.12/darwin_arm64/lib/test/libregrtest/: runtests.py
python3.12/darwin_arm64/lib/test/test_asyncio/: test_base_events.py
python3.12/darwin_arm64/lib/test/test_ctypes/: test_find.py
python3.12/darwin_arm64/lib/test/test_zipfile/: test_core.py
python3.12/darwin_arm64/lib/tkinter/: __init__.py
python3.12/darwin_arm64/lib/turtledemo/: __main__.py
python3.12/include/python3.12/: pyconfig.h
python3.12/linux-x64/debug/include/: pyconfig.h
python3.12/linux/include/: pyconfig.h
python3.12/osx-64/debug/lib/: ld_so_aix
python3.12/osx-64/lib/: subprocess.py  tempfile.py  uuid.py
python3.12/osx-64/lib/email/: charset.py
python3.12/osx-64/lib/idlelib/: config.py  iomenu.py  sidebar.py  squeezer.py
python3.12/osx-64/lib/multiprocessing/: heap.py
python3.12/osx-64/lib/pydoc_data/: topics.py
python3.12/osx-64/lib/test/: test_mmap.py  test_pathlib.py  test_zlib.py
python3.12/osx-64/lib/test/support/: os_helper.py
python3.12/osx-64/lib/test/test_email/: test_email.py
python3.12/osx-64/lib/tkinter/: ttk.py
python3.12/steamrt_x64/release/include/: pyconfig.h
python3.12/win-64/debug/lib/: _asyncio_d.pyd  _zoneinfo_d.pyd
python3.12/windows-x64/debug/lib/: _bz2_d.pyd  _elementtree_d.pyd  _overlapped_d.pyd  select_d.pyd
python3.12/windows/debug/: _ctypes_d.pyd  _decimal_d.pyd  _hashlib_d.pyd  _msi_d.pyd  _multiprocessing_d.pyd  _queue_d.pyd  _socket_d.pyd  _ssl_d.pyd  _wmi_d.pyd  pyexpat_d.pyd  python312_d.lib  unicodedata_d.pyd  winsound_d.pyd
python3.12/windows/debug/lib/: _lzma_d.pyd
python3.12/windows_x64/debug/lib/: _sqlite3_d.pyd  _uuid_d.pyd
src/: module.cpp  module.h  module.hpp
test/admin_simple/: admin_simple.pplugin  admin_simple.wplugin
test/admin_simple/utils/: admin_simple.py
test/cross_call_worker/: cross_call_worker.pplugin  cross_call_worker.py
